# playing-card-platform

./: .env  .flake8  .gitignore  README.md  app.py  config.py  pyproject.toml  template.env
migrations/: env.py
migrations/versions/: 6f58f857b93d_20200328_initial_migrations.py
playing_card_platform/: __init__.py
playing_card_platform/methods/: __init__.py
playing_card_platform/models/: __init__.py
playing_card_platform/routes/: __init__.py
tests/: __init__.py  test_playing_card_platform.py  test_sockets.py
