[tool.poetry]
name = "playing-card-platform"
version = "0.1.0"
description = ""
authors = ["Marlan Perumal <marlan.perumal@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
flask = "^1.1.1"
flask-sqlalchemy = "^2.4.1"
psycopg2-binary = "^2.8.4"
flask-migrate = "^2.5.3"
flask-cors = "^3.0.8"
python-dotenv = "^0.12.0"
flask-socketio = "^4.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^19.10b0", allow-prereleases = true}
flake8 = "^3.7.9"
flask-testing = "^0.8.0"

[tool.black]
line-length = 108

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
